--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -38,5 +38,14 @@
     "/js/app.03be5fb05ffa9d6f7191.hot-update.js": "/js/app.03be5fb05ffa9d6f7191.hot-update.js",
     "/js/app.f0f96b20c2229f50d982.hot-update.js": "/js/app.f0f96b20c2229f50d982.hot-update.js",
     "/js/app.a34b5ba19fbe2f74c388.hot-update.js": "/js/app.a34b5ba19fbe2f74c388.hot-update.js",
-    "/js/app.ffffed626d268be0d557.hot-update.js": "/js/app.ffffed626d268be0d557.hot-update.js"
+    "/js/app.ffffed626d268be0d557.hot-update.js": "/js/app.ffffed626d268be0d557.hot-update.js",
+    "/js/app.4718f8f43f70bbbf8fa6.hot-update.js": "/js/app.4718f8f43f70bbbf8fa6.hot-update.js",
+    "/js/app.17a9f61dd6bab6f79d67.hot-update.js": "/js/app.17a9f61dd6bab6f79d67.hot-update.js",
+    "/js/app.92223c47ce8f788e938b.hot-update.js": "/js/app.92223c47ce8f788e938b.hot-update.js",
+    "/js/app.390f436aeb178af2aaba.hot-update.js": "/js/app.390f436aeb178af2aaba.hot-update.js",
+    "/js/app.21fe70de7d50b9652145.hot-update.js": "/js/app.21fe70de7d50b9652145.hot-update.js",
+    "/js/app.81cd8401a7cac5586550.hot-update.js": "/js/app.81cd8401a7cac5586550.hot-update.js",
+    "/js/app.d8b5e85d5ca9f9bc72d8.hot-update.js": "/js/app.d8b5e85d5ca9f9bc72d8.hot-update.js",
+    "/js/app.e8c127696c820bbd76b0.hot-update.js": "/js/app.e8c127696c820bbd76b0.hot-update.js",
+    "/js/app.c2078c90c3c526bf7f1f.hot-update.js": "/js/app.c2078c90c3c526bf7f1f.hot-update.js"
 }
